# BLADE

./: .gitignore  .pixi  .pre-commit-config.yaml  BLADE.py  README.md  pyproject.toml
examples/: oxide_tdb_gen.py  prop_finder copy.py  prop_finder.py  prop_finder_backup.py  tdb_gen.py
resources/: mf_test.py  oxides.py  sqs2poscar.py
resources/POSCARs/: POSCAR  POSCAR2  POSCARFCC
src/blade/: blade_compositions.py  blade_cutoff.py  blade_phase_diagram.py  blade_sqs.py  blade_tdb_gen.py  blade_visual.py
src/blade/analysis/: blade_visual.py  blade_volume.py
src/blade/tools/: blade_compositions.py  blade_sqs.py  blade_tdb_gen.py
