[project]
name = "blade"
version = "0.1.0"
description = "BLADE utilities"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "prek>=0.3.0",
    "ruff>=0.14.14",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ERA", # Eradicate
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "FA",  # flake8-future-annotations
    "ICN", # flake8-import-conventions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8-naming
    "E",   # pycodestyle Errors
    "W",   # pycodestyle Warnings
    "D",   # pydocstyle
    "F",   # Pyflakes
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function"
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
]
pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
